# nullrun-sdk-python

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  analyze.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  publish-test.yml  publish.yml
docs/: drift.md  sdk-v3-migration-gaps.md
docs/errors/: NR-A001.md  NR-A002.md  NR-A003.md  NR-B001.md  NR-B002.md  NR-B004.md  NR-B005.md  NR-C001.md  NR-C003.md  NR-L001.md  NR-R001.md  NR-T001.md  NR-W002.md  NR-W003.md  README.md
examples/: async_usage.py  basic.py  basic_observe.py  cost_dashboard.py
protos/nullrun/v1/: track.proto
src/nullrun/: __init__.py  __version__.py  _handle.py  _registry.py  _singleton.py  actions.py  business_impact.py  capabilities.py  context.py  decision_history.py  decorators.py  extractor.py  grpc_transport.py  messages.py  observability.py  py.typed  runtime.py  tracing.py  transport.py  transport_websocket.py  uuid7.py
src/nullrun/breaker/: __init__.py  __main__.py  circuit_breaker.py  exceptions.py
src/nullrun/common/: __init__.py
src/nullrun/flow/: __init__.py
src/nullrun/gate/: __init__.py
src/nullrun/instrumentation/: __init__.py  _safe_patch.py  auto.py  auto_requests.py  autogen.py  crewai.py  langgraph.py  llama_index.py  openai.py
src/nullrun/integrations/: __init__.py  fastapi.py
src/nullrun/observability/: __init__.py  error_hooks.py  status.py
src/nullrun/toolbox/: __init__.py  langgraph.py
tests/: conftest.py  test_actions.py  test_actions_context_init.py  test_agent_id_uuid.py  test_approval_money_flow.py  test_approval_timeout_field.py  test_args_pii_masked.py  test_auto_requests.py  test_autogen_patch.py  test_batch_response_parsing.py  test_blocked_exception.py  test_blocker_fixes.py  test_breaker_main.py  test_buffer_invariants.py  test_business_impact.py  test_capabilities.py  test_cb_halfopen_publish.py  test_circuit_breaker_branches.py  test_coverage_report.py  test_coverage_seen_httpx.py  test_crewai_patch.py  test_dead_code_removed.py  test_decision_split.py  test_dedup.py  test_deprecation_warnings.py  test_drift_fixes_2026_07_04.py  test_e2e_observation.py  test_error_envelope.py  test_error_hooks.py  test_exception_hierarchy.py  test_execute_approval_flow.py  test_extractors.py  test_framework_patches.py  test_gate_real_path.py  test_grpc_removed.py  test_handle.py  test_high_reliability_fixes.py  test_hmac_byte_equality.py  test_hmac_signing.py  test_httpx_patch.py  (+50 more)
tests/contract/: test_llm_call_model_wire.py
